--- a/template/index.html
+++ b/template/index.html
@@ -69,6 +69,7 @@
     <div class="content__search">
       <div class="content__search-box">
         <input type="text" id="searchInput" class="content__search-line" placeholder="Поиск по названию..." />
+       <button id="clearSearch" class="content__search-clear">×</button>
         <span class="content__loupe_box">
           <img src="../images/loupe.svg" alt="loupe" class="content__loupe_img" />
         </span>
